--- a/Digital-Clock/clock-index.html
+++ b/Digital-Clock/clock-index.html
@@ -9,6 +9,7 @@
     <script src="clock-script.js" defer></script>
 </head>
 <body>
+    <nav></nav>
     <div class="container">
         <span id="hours">00</span>
         <span>:</span>
