Project Work day 3

--- a/Digital-Clock/clock-index.html
+++ b/Digital-Clock/clock-index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="clock-style.css">
     <script src="clock-script.js" defer></script>
 </head>
+
 <body>
     <nav></nav>
     <div class="container">
@@ -18,5 +20,7 @@
         <span id="seconds">00</span>
         <span id="session">AM</span>
     </div>
+    <script src="clock-script.js" defer></script>
 </body>
+
 </html>
