--- a/stopwatch.html
+++ b/stopwatch.html
@@ -14,29 +14,32 @@
               src="https://thumbs.dreamstime.com/b/clock-logo-clock-logo-clock-logo-clock-logo-design-inspiration-121765250.jpg"
               alt="" />
           </div>
-          <nav>
-            <ul>
-                <li><a href=""> Clock</a></li>
-                <li><a href=""> Stop Watch</a></li>
-              <li><a href=""> Timer</a></li>
-              <li><a href=""> World Clcok</a></li>
-            </ul>
-          </nav>
+         
         </div>
 </header>    
 <section>
+  <div class="stopwatch">
+    <h1><span class="gold">GOLD</span> STOPWATCH</h1>
     <div class="container">
-    <div class="timerDisplay">00:00:00
+      <div class="circle">
+        <span class="time">
+    <div class="timerDisplay">00:00:00 </span>
         </div>
+      </div>
    <span> <div class="buttons"> </span>
     
     <button id="Pause">Pause</button> <span></span>
     <button id="Start">Start</button>
     <button id="Reset">Reset</button>
+    <button id="Done">Done</button>
 </div>
     </div>
     </div>
     </section>
     <script src="/stopwatch.js"></script>
+    <div class="result">
+      <div class="displayTimer"></div>
+      <div class="timerResults"></div>
+    </div>
 </body>
 </html>
